CMS7-8779: prevent resubmit, fix styling, fix re-occurring feedback messages - use jQuery to attach to a form's submit handler, auto-disables all input[submit] fields of the form and prevents resubmit - moved scripts to src/main/resources - reload header label as well - only redraw labels if they are visible (fixes ajax error for repainting hidden captcha label)  - prevent feedback messages from re-appearing by filtering out messages that have been previously rendered  - added disabled submit button style

--- a/cms/api/src/main/styling/less/_login.less
+++ b/cms/api/src/main/styling/less/_login.less
@@ -101,6 +101,12 @@
     color: @login-panel-center-button-color;
     border-radius: 4px;
     min-width: 64px;
+
+    &[disabled] {
+      background-color: @button-disabled-bgcolor;
+      border-color: @button-disabled-border;
+      color: @button-disabled-color;
+    }
   }
 }
 
